name:                network-proto
version:             0.1.0.0
synopsis:            network proto
description:         network proto
-- license:             
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable server
  main-is:             Server.hs
  ghc-options: -O2
  build-depends:       base >=4.7 && <4.8
                     , io-streams
                     , network
                     , bytestring
                     , cereal
  default-language:    Haskell2010

executable client
  main-is:             Client.hs
  build-depends:       base >=4.7 && <4.8
                     , io-streams
                     , bytestring
                     , network
                     , cereal
  ghc-options: -O2
  default-language:    Haskell2010


